# coralmicro

./: README.md  setup.sh
apps/: CMakeLists.txt
apps/first_project/: CMakeLists.txt  main.cc
apps/multi_dnn/: CMakeLists.txt  main.cc  mcu.h  person_detect.cc  person_detect.h
apps/multicore_model_cascade/: multicore_model_cascade_cm7.cc
examples/detect_faces/: detect_faces.cc
examples/tflm_person_detection_m7/: person_detection.cc
models/: apple.raw  apple_float32.raw  image.py  person.raw  tmp.py
scripts/: requirements.txt
